--- a/client/nginx/nginx.conf
+++ b/client/nginx/nginx.conf
@@ -1,7 +1,19 @@
+upstream api_upstream{
+    server server:5000;
+}
+
 server {
-    server_name example.com;
-    location ~ / {
-        root /var/www/example.com/static;
-        try_files $uri /index.html;
-    }
+  listen 80;
+  location /api/ {
+    proxy_pass  http://api_upstream;
+  }
+  location / {
+    root  /usr/share/nginx/html;
+    index index.html index.htm;
+    try_files $uri $uri/ /index.html;
+  }
+  error_page  500 502 503 504 /50x.html;
+  location = /50x.html {
+      root  /usr/share/nginx/html;
+  }
 }
